Review Request 2590: Add permgen setting to avoid failure when too many classes are loaded when running the app master.